2007-01-13  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/Expression.java (Atan2Function,
        PowFunction, AcosFunction, AsinFunction, AtanFunction
        FmodFunction, LogFunction, Log10Function,
        SqrtFunction):
        Add valid input bounds checks to math functions.
        Fix typo in log10() function that make it
        return incorrect results.

2006-09-16  Mo DeJong  <mdejong@users.sourceforge.net>

        * docs/TJC/module.html: Mention that PACKAGE
        statement is required in a module file.
        * src/tjc/tjc/library/module.tcl:
        Update module_parse_validate so that an
        error will be generated when no PACKAGE
        declaration is found in a module file.
        * tests/tjc/module.test: Check for missing
        PACKAGE statement.

2006-09-11  Mo DeJong  <mdejong@users.sourceforge.net>

        * docs/TclJava/ClassLoading.html: Update
        class loading info, mention use of context
        class loader and how env(TCL_CLASSPATH) should
        be used at runtime.
        * docs/TclJava/JavaSignatures.html: Update
        signature docs, add full signature example.
        * src/tcljava/tcl/lang/TclClassLoader.java (checkTclClasspath):
        A bug was causing changes to env(TCL_CLASSPATH) to
        be ignored in checkTclClasspath, fix it by using
        || instead of && in the test expr.
        * tests/tcljava/tcljavaInterp.test: Add
        regression test cases for path bug.
        [Bug 1556640]

2006-08-21  Mo DeJong  <mdejong@users.sourceforge.net>

        * announce: Update for 1.4.0 release.
        * docs/Topics/WhatsNew.html: Mention setInterrupt API.
        * docs/website/index.html: Update for 1.4.0 release.

2006-08-21  Mo DeJong  <mdejong@users.sourceforge.net>

        * configure: Regen.
        * tcljava.m4 (AC_GCC_BUGS):
        Replace AC_TRY_COMPILE with AC_TRY_RUN so
        that program is compiled and run on host system.
	[Bug 1528278]
